--- a/spk/filebrowser/Makefile
+++ b/spk/filebrowser/Makefile
@@ -13,7 +13,7 @@ DESCRIPTION = filebrowser provides a file managing interface within a specified 
 HOMEPAGE = https://filebrowser.org/
 HELPURL = https://github.com/filebrowser/filebrowser/issues
 LICENSE = Apache 2.0
-CHANGELOG = "1. Update File Browser to v2.55.0. <br/>2. Built with go v1.25.4 and node v24.11.1."
+CHANGELOG = "1. Update File Browser to v2.55.0 <br/>2. Add wizard for admin credential configuration <br/>3. Built with go v1.25.4 and node v24.11.1."
 
 GROUP = synocommunity
 
