--- a/spk/salt-minion/src/requirements-crossenv.txt
+++ b/spk/salt-minion/src/requirements-crossenv.txt
@@ -2,20 +2,20 @@
 # https://github.com/saltstack/salt/blob/v3007.11/requirements/static/pkg/py3.12/linux.txt
 
 aiohappyeyeballs==2.6.1
-aiohttp==3.9.5                  # Pin to 3.9.5 - newer versions fail with older GCC (ATOMIC_INT_LOCK_FREE)
+aiohttp==3.13.3
 cffi==2.0.0
 cryptography==42.0.5
-frozenlist==1.4.1               # Pin to 1.4.1 for aiohttp 3.9.5 compatibility
+frozenlist==1.4.1               # Pin - newer versions use C++ atomics incompatible with GCC 4.9
 immutables==0.21
 MarkupSafe==2.1.3
 msgpack==1.0.7
-multidict==6.4.3                # Bump from 6.0.4 to build with Python 3.12
-propcache==0.2.1                # Pin to 0.2.1 for aiohttp 3.9.5 compatibility
+multidict==6.0.4
+propcache==0.2.1                # Pin - newer versions use C++ atomics incompatible with GCC 4.9
 psutil==5.9.6
 pycryptodomex==3.19.1
-PyYAML==6.0.2                   # Bump from 6.0.1 to build
+PyYAML==6.0.2
 pyzmq==25.1.2
 setproctitle==1.3.2
 timelib==0.3.0
 tornado==6.5.4
-yarl==1.9.4                     # Pin to 1.9.4 for aiohttp 3.9.5 compatibility
+yarl==1.9.4                     # Pin - newer versions use C++ atomics incompatible with GCC 4.9
