--- a/spk/salt-master/src/requirements-crossenv.txt
+++ b/spk/salt-master/src/requirements-crossenv.txt
@@ -5,12 +5,12 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
 cffi==2.0.0
 cryptography==42.0.5
-frozenlist==1.4.1               # Pin - newer versions use C++ atomics incompatible with GCC 4.9
+frozenlist==1.7.0
 immutables==0.21
 MarkupSafe==2.1.3
 msgpack==1.0.7
 multidict==6.0.4
-propcache==0.2.1                # Pin - newer versions use C++ atomics incompatible with GCC 4.9
+propcache==0.3.2
 psutil==5.9.6
 pycryptodomex==3.19.1
 PyYAML==6.0.2
@@ -18,4 +18,4 @@ pyzmq==25.1.2
 setproctitle==1.3.2
 timelib==0.3.0
 tornado==6.5.4
-yarl==1.9.4                     # Pin - newer versions use C++ atomics incompatible with GCC 4.9
+yarl==1.20.1
