--- a/spk/zabbix-agent/src/zabbix_agentd.conf
+++ b/spk/zabbix-agent/src/zabbix_agentd.conf
@@ -319,18 +319,6 @@ Hostname=@@wizard_Hostname@@
 # Default:
 # User=zabbix
 
-### Option: Include
-#	You may include individual files or all files in a directory in the configuration file.
-#	Installing Zabbix will create include directory in /usr/local/etc, unless modified during the compile time.
-#
-# Mandatory: no
-# Default:
-# Include=
-
-# Include=/usr/local/etc/zabbix_agentd.userparams.conf
-# Include=/usr/local/etc/zabbix_agentd.conf.d/
-# Include=/usr/local/etc/zabbix_agentd.conf.d/*.conf
-
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
 ### Option: UnsafeUserParameters
@@ -547,3 +535,17 @@ Hostname=@@wizard_Hostname@@
 # Range: 0 - INT_MAX (depends on system, too large values may be silently truncated to implementation-specified maximum)
 # Default: SOMAXCONN (hard-coded constant, depends on system)
 # ListenBacklog=
+
+####### Additional configuration files  #######
+
+### Option: Include
+#	You may include individual files or all files in a directory in the configuration file.
+#	Installing Zabbix will create include directory in /usr/local/etc, unless modified during the compile time.
+#
+# Mandatory: no
+# Default:
+# Include=
+
+# Include=/usr/local/etc/zabbix_agentd.userparams.conf
+# Include=/usr/local/etc/zabbix_agentd.conf.d/
+# Include=/usr/local/etc/zabbix_agentd.conf.d/*.conf
