--- a/spk/ntfy/Makefile
+++ b/spk/ntfy/Makefile
@@ -1,11 +1,11 @@
 SPK_NAME = ntfy
-SPK_VERS = 2.11.0
+SPK_VERS = 2.16.0
 SPK_REV = 1
 SPK_ICON = src/ntfy.png
 
 DEPENDS = cross/ntfy
 
-UNSUPPORTED_ARCHS += $(PPC_ARCHS) $(ARMv5_ARCHS)
+UNSUPPORTED_ARCHS = $(PPC_ARCHS) $(ARMv5_ARCHS)
 
 MAINTAINER = hgy59
 DISPLAY_NAME = ntfy
