--- a/cross/ympd/Makefile
+++ b/cross/ympd/Makefile
@@ -12,6 +12,8 @@ HOMEPAGE = https://ympd.org/
 COMMENT  = Standalone MPD Web GUI written in C, utilizing Websockets and Bootstrap/JS.
 LICENSE  = GPLv2
 
+PATCHES_LEVEL = 1
+
 CMAKE_USE_TOOLCHAIN_FILE = NO
 
 include ../../mk/spksrc.cross-cmake.mk
