--- a/cross/mympd/Makefile
+++ b/cross/mympd/Makefile
@@ -18,12 +18,16 @@ COMMENT  = myMPD is a standalone and mobile friendly web mpd client with a tiny 
 LICENSE  = GPLv3
 
 CMAKE_USE_NINJA = 0
+CMAKE_ARGS += -DLUA_INCLUDE_DIR:PATH=$(INSTALL_DIR)$(INSTALL_PREFIX)/include
+CMAKE_ARGS += -DLUA_LIBRARY:FILEPATH=$(INSTALL_DIR)$(INSTALL_PREFIX)/lib/liblua.so
+CMAKE_ARGS += -DLUA_MATH_LIBRARY:STRING=m
 CMAKE_ARGS += -DMYMPD_ENABLE_FLAC=OFF
+CMAKE_ARGS += -DMYMPD_ENABLE_MYGPIOD=OFF
 CMAKE_ARGS += -DMYMPD_DOC=OFF
 CMAKE_ARGS += -DMYMPD_MANPAGES=OFF
 CMAKE_ARGS += -DMYMPD_STARTUP_SCRIPT=OFF
 CMAKE_ARGS += -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-CMAKE_ARGS += -DMATH_LIB=m
+CMAKE_ARGS += -DMATH_LIB:STRING=m
 
 POST_INSTALL_TARGET = mympd_post_install
 
