Transmission: Update to v4.1.0

--- a/cross/transmission/Makefile
+++ b/cross/transmission/Makefile
@@ -1,10 +1,9 @@
 PKG_NAME = transmission
-PKG_VERS = 4.1.0-beta.5
-PKG_REVISION = r11d3fc6f5a
+PKG_VERS = 4.1.0
 PKG_EXT = tar.xz
-PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS)+$(PKG_REVISION).$(PKG_EXT)
+PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS).$(PKG_EXT)
 PKG_DIST_SITE = https://github.com/transmission/transmission/releases/download/$(PKG_VERS)
-PKG_DIR = $(PKG_NAME)-$(PKG_VERS)+$(PKG_REVISION)
+PKG_DIR = $(PKG_NAME)-$(PKG_VERS)
 
 DEPENDS = cross/curl
 
