cross/*/Makefile: Migrate from spksrc.archs.mk to spksrc.common.mk
Note that half of the makefiles where already using common.mk. Now
standardizing so all uses it.

--- a/cross/erlang/Makefile
+++ b/cross/erlang/Makefile
@@ -27,7 +27,7 @@ CONFIGURE_ARGS += --with-ssl=$(STAGING_INSTALL_PREFIX)
 CONFIGURE_ARGS += erl_xcomp_sysroot=$(INSTALL_DIR)
 CONFIGURE_ARGS += CFLAGS="-O2 -g -D_GNU_SOURCE"
 
-include ../../mk/spksrc.archs.mk
+include ../../mk/spksrc.common.mk
 # custom definition of args normally defined with GNU_CONFIGURE = 1, to force cross compilation (see below)
 CONFIGURE_ARGS += --host=$(TC_TARGET) --prefix=$(INSTALL_PREFIX)
 
