framework: refactor common.mk to split base definitions (#6906)
* framework: refactor common.mk to split base definitions
* spksrc.base.mk: Ensure dedup macro removes empty elements
* common.mk: Restructuration and documentation to ease maintenance
* cross/*/Makefile: Migrate from spksrc.archs.mk to spksrc.common.mk
* spk/*/Makefile: Migrate from spksrc.archs.mk to spksrc.common.mk
* native/llvm-14.0: Use latest uplaod fixing llvm-spirv runpath
* commons.mk: Add further info in the header description

---------

Co-authored-by: Vincent Fortier <th0ma7@gmail.com>

--- a/cross/ghostscript/Makefile
+++ b/cross/ghostscript/Makefile
@@ -21,7 +21,7 @@ GNU_CONFIGURE = 1
 # tesseract integration requires c++17, but fails to build...
 CONFIGURE_ARGS += --without-tesseract
 
-include ../../mk/spksrc.archs.mk
+include ../../mk/spksrc.common.mk
 
 # Fix brotli C90 compatibility issue with older toolchains
 # The embedded brotli library uses C99-style mixed declarations
