Add native/lua package for myMPD build dependency
myMPD requires luac (Lua compiler) to compile embedded Lua scripts during
the cmake build process. This adds native/lua as a BUILD_DEPENDS and ensures
the native luac binary is in PATH during the cross-compilation.

--- a/cross/mympd/Makefile
+++ b/cross/mympd/Makefile
@@ -7,6 +7,9 @@ PKG_DIST_FILE = $(PKG_NAME)-$(PKG_VERS).$(PKG_EXT)
 PKG_DIR = myMPD-$(PKG_VERS)
 
 DEPENDS = cross/libmpdclient cross/openssl3 cross/pcre2 cross/libid3tag cross/utf8proc cross/lua
+BUILD_DEPENDS = native/lua
+LUA_NATIVE_PATH = $(abspath $(PWD)/../../native/lua/work-native/install/bin)
+ENV += PATH=$(LUA_NATIVE_PATH):$$PATH
 PATCHES_LEVEL = 1
 
 REQUIRED_MIN_DSM = 7.0
