native/lua: use linux target instead of linux-readline
The linux-readline target requires libreadline-dev which is not
available in the CI Docker container. Since we only need the luac
binary for myMPD build, the simpler linux target is sufficient.

--- a/native/lua/Makefile
+++ b/native/lua/Makefile
@@ -12,7 +12,7 @@ COMMENT = Lua is a powerful, efficient, lightweight, embeddable scripting langua
 LICENSE = MIT
 
 CONFIGURE_TARGET = nop
-COMPILE_MAKE_OPTIONS = linux-readline
+COMPILE_MAKE_OPTIONS = linux
 INSTALL_MAKE_OPTIONS = install INSTALL_TOP=$(INSTALL_DIR)
 
 include ../../mk/spksrc.native-cc.mk
