rtorrent/libtorrent: downgrade to 0.16.5 to fix crash (#6931)
Downgrade rtorrent and libtorrent-rakshasa from 0.16.6 to 0.16.5 to
resolve the segmentation fault in xmlrpc_DECREF reported in issue #6931.

Upstream rtorrent issue #1689 confirms 0.16.6 has socket handling bugs
in the SCGI thread that cause crashes under concurrent XML-RPC load.
Downgrading to 0.16.5 has been reported to resolve the issue.

Also streamline xmlrpc-c build flags:
- Disable unused components (abyss-server, cplusplus, libwww-client, curl-client)
- Remove cross/curl dependency (not needed since curl-client is disabled)
- Update PLIST to match reduced build output

--- a/cross/xmlrpc-c/Makefile
+++ b/cross/xmlrpc-c/Makefile
@@ -5,7 +5,7 @@ PKG_DIST_NAME = $(PKG_NAME)-$(PKG_VERS).$(PKG_EXT)
 PKG_DIST_SITE = https://sourceforge.net/projects/xmlrpc-c/files/Xmlrpc-c%20Super%20Stable/$(PKG_VERS)
 PKG_DIR = $(PKG_NAME)-$(PKG_VERS)
 
-DEPENDS = cross/libxml2 cross/curl
+DEPENDS = cross/libxml2
 
 HOMEPAGE = http://xmlrpc-c.sourceforge.net/
 COMMENT  = Programming library for writing an XML-RPC server or client in C or C++.
@@ -14,6 +14,15 @@ LICENSE  = BSD
 GNU_CONFIGURE = 1
 
 CONFIGURE_ARGS = --enable-libxml2-backend
+# Disable components not used by rTorrent (the only consumer of xmlrpc-c in spksrc):
+# - abyss-server: rTorrent uses its own SCGI server, not the Abyss HTTP server
+# - cplusplus: rTorrent uses the C API (xmlrpc_registry_*, xmlrpc_DECREF, etc.)
+# - libwww-client: W3C libwww HTTP client transport (deprecated, unused)
+# - curl-client: XML-RPC client transport; rTorrent is a server, not a client
+CONFIGURE_ARGS += --disable-abyss-server
+CONFIGURE_ARGS += --disable-cplusplus
+CONFIGURE_ARGS += --disable-libwww-client
+CONFIGURE_ARGS += --disable-curl-client
 
 # Limit parallelism for xmlrpc-c; avoid races in libxmlrpc_util.so build
 DISABLE_PARALLEL_MAKE = 1
