--- a/spk/rutorrent/Makefile
+++ b/spk/rutorrent/Makefile
@@ -1,13 +1,13 @@
 SPK_NAME = rutorrent
 SPK_VERS = 5.2.10
-SPK_REV = 21
+SPK_REV = 22
 SPK_ICON = src/rutorrent.png
 DSM_UI_DIR = app
 
 MAINTAINER = SynoCommunity
 DESCRIPTION = ruTorrent is a front-end for the popular Bittorrent client rTorrent. rTorrent is a BitTorrent client for ncurses, using the libtorrent library. The client and library is written in C++ with emphasis on speed and efficiency, while delivering equivalent features to those found in GUI based clients in an ncurses client.
 DISPLAY_NAME = ruTorrent
-CHANGELOG = "1. Update rtorrent/libtorrent to v0.16.6. <br/>2. Add file handle and peer limits to prevent 'Too many open files' errors."
+CHANGELOG = "1. Downgrade rtorrent/libtorrent to v0.16.5 to fix crash (\#6931). <br/>2. Disable unused xmlrpc-c components."
 
 # libtorrent-rakshasa requires C++14 support
 REQUIRED_MIN_DSM = 7.0
