Borg: update borgmatic to 2.1.1 (#6910)
- Update borgmatic from 2.0.12 to 2.1.1
- Update llfuse from 1.5.1 to 1.5.2
- Update inform from 1.35 to 1.36
- Update nestedtext from 3.7 to 3.8
- Update packaging from 25.0 to 26.0
- Update quantiphy from 2.20 to 2.21
- Update ruamel.yaml from 0.18.16 to 0.19.1
- Update tzdata from 2025.2 to 2025.3
- Update urllib3 from 2.6.1 to 2.6.3
- Bump SPK_REV to 21

--- a/spk/borgbackup/Makefile
+++ b/spk/borgbackup/Makefile
@@ -1,6 +1,6 @@
 SPK_NAME = borgbackup
 SPK_VERS = 1.4.3
-SPK_REV = 20
+SPK_REV = 21
 SPK_ICON = src/borgbackup.png
 
 PYTHON_PACKAGE = python312
@@ -42,7 +42,7 @@ DESCRIPTION = BorgBackup \(short: Borg\) is a deduplicating backup program. Opti
 
 DISPLAY_NAME = Borg
 STARTABLE = no
-CHANGELOG = "1. Update Borg to v1.4.3.<br/>2. Update borgmatic to v2.0.12.<br/>3. Refresh Python dependencies."
+CHANGELOG = "1. Update borgmatic to v2.1.1.<br/>2. Refresh Python dependencies."
 
 HOMEPAGE = https://borgbackup.readthedocs.io
 LICENSE  = 3-Clause BSD
