Borg: use llfuse 1.5.2 with CYTHON_ATOMICS=0 for GCC < 5
Revert the llfuse downgrade to 1.5.1 and instead use -DCYTHON_ATOMICS=0
compiler flag for GCC < 5 toolchains. This disables Cython atomics which
use ATOMIC_INT_LOCK_FREE macro that is not a preprocessor constant in
older GCC versions, causing build failures on DSM 6.2.4 architectures.

--- a/spk/borgbackup/Makefile
+++ b/spk/borgbackup/Makefile
@@ -68,7 +68,9 @@ endif
 
 # [llfuse]
 ifeq ($(call version_lt, $(TC_GCC), 5.0),1)
-WHEELS_CFLAGS += [llfuse] -std=gnu11
+# llfuse 1.5.2 uses Cython 3.2.3 which generates C11 atomics code that fails
+# due to ATOMIC_INT_LOCK_FREE not being a preprocessor constant in older GCC.
+WHEELS_CFLAGS += [llfuse] -std=gnu11 -DCYTHON_ATOMICS=0
 endif
 
 # [msgpack]
