--- a/spk/mympd/Makefile
+++ b/spk/mympd/Makefile
@@ -12,7 +12,7 @@ REQUIRED_MIN_SRM = 1.3
 
 MAINTAINER = hgy59
 DESCRIPTION = myMPD is a standalone and mobile friendly web mpd client with a tiny footprint and advanced features.
-CHANGELOG = "Update myMPD 24.0.2 <br/>Major version update with fuzzy search, improved MPD protocol handling, and better UTF-8 support."
+CHANGELOG = "1. Update myMPD 24.0.2. Major version update with fuzzy search, improved MPD protocol handling, and better UTF-8 support. <br/>2. Configure MPD socket connection for music directory and playlist directory support."
 
 DISPLAY_NAME = myMPD
 
