Borg: Build for ARMv5 and ARMv7L using Python 3.11

--- a/spk/borgbackup/Makefile
+++ b/spk/borgbackup/Makefile
@@ -3,9 +3,7 @@ SPK_VERS = 1.4.3
 SPK_REV = 21
 SPK_ICON = src/borgbackup.png
 
-PYTHON_PACKAGE = python312
-SPK_DEPENDS = "$(PYTHON_PACKAGE)"
-UNSUPPORTED_ARCHS = $(OLD_PPC_ARCHS) $(ARMv5_ARCHS) $(ARMv7L_ARCHS)
+UNSUPPORTED_ARCHS = $(OLD_PPC_ARCHS)
 
 DEPENDS = cross/acl cross/attr cross/fuse cross/libb2 cross/lz4 cross/openssl3 cross/xxhash cross/zstd
 
@@ -47,11 +45,23 @@ CHANGELOG = "1. Update borgmatic to v2.1.1.<br/>2. Refresh Python dependencies."
 HOMEPAGE = https://borgbackup.readthedocs.io
 LICENSE  = 3-Clause BSD
 
-SERVICE_SETUP = src/service-setup.sh
-
 SPK_USR_LOCAL_LINKS = bin:env/bin/borg bin:env/bin/borgmatic bin:env/bin/emborg
 
 include ../../mk/spksrc.python.mk
+
+PYTHON_PACKAGE = 
+
+# Build for ARMv5 and ARMv7L using Python 3.11. All other use Python 3.12
+ifeq ($(findstring $(ARCH),$(ARMv5_ARCHS) $(ARMv7L_ARCHS)),$(ARCH))
+PYTHON_PACKAGE = python311
+SERVICE_SETUP = src/service-setup_py311.sh
+else
+PYTHON_PACKAGE = python312
+SERVICE_SETUP = src/service-setup_py312.sh
+endif
+
+SPK_DEPENDS = "$(PYTHON_PACKAGE)"
+
 
 # [borgbackup]
 # Use OpenSSL path as defined by either
