update descriptions to mention SMART monitoring docs

--- a/spk/beszel-agent/Makefile
+++ b/spk/beszel-agent/Makefile
@@ -6,7 +6,7 @@ SPK_ICON = src/beszel.png
 DEPENDS = cross/beszel-agent
 
 MAINTAINER = not-first
-DESCRIPTION = "Lightweight server monitoring with historical data, docker stats, and alerts. This package provides only the agent, and requires Beszel Hub to be running elsewhere."
+DESCRIPTION = Lightweight server monitoring with historical data, docker stats, and alerts. This package provides only the agent, and requires Beszel Hub to be running elsewhere. See Beszel documentation for information on setting up SMART monitoring.
 
 DISPLAY_NAME = Beszel Agent
 CHANGELOG = "Initial package release for Beszel 0.18.3"
