--- a/spk/rutorrent/src/wizard_templates/install_uifile_fre.yml
+++ b/spk/rutorrent/src/wizard_templates/install_uifile_fre.yml
@@ -1,11 +1,10 @@
-BASIC_CONFIGURATION_TITLE: "Configuration de base"
+BASIC_CONFIGURATION_TITLE: "Configuration de ruTorrent"
 
-DOWNLOAD_SHARE_DESC: "Dossier partagé pour les téléchargements. Ce doit être un nom de dossier uniquement, sans chemin. Ce partage est créé à l'installation s'il n'existe pas déjà. Pour utiliser un partage sur un volume spécifique, créez le partage avant l'installation."
+DOWNLOAD_SHARE_DESC: "Dossier partagé pour les téléchargements. Ce dossier sera créé s'il n'existe pas. Pour utiliser un volume spécifique, créez le partage avant l'installation."
 DOWNLOAD_SHARE_LABEL: "Dossier partagé"
-DOWNLOAD_SHARE_VALIDATION_ERROR: "Le nom du partage doit être un nom de dossier uniquement. Les sous-répertoires et caractères spéciaux ne sont pas autorisés."
+DOWNLOAD_SHARE_VALIDATION_ERROR: "Les sous-répertoires ne sont pas pris en charge."
 
 WATCH_DIR_DESC: "Optionnel: Surveiller un répertoire pour les fichiers torrent et les ajouter automatiquement. Le chemin est relatif au dossier de téléchargements. Laisser vide pour désactiver."
 WATCH_DIR_LABEL: "Répertoire surveillé"
 
-DSM_PERMISSIONS_TITLE: "Permissions DSM"
-DSM_PERMISSIONS_TEXT: "ruTorrent s'exécute en tant qu'utilisateur de service interne <b>'sc-rutorrent'</b> dans DSM. Le dossier partagé ci-dessus est configuré lors de l'installation pour être accessible par cet utilisateur.<p>Veuillez lire <a target=\\\"_blank\\\" href=\\\"https://github.com/SynoCommunity/spksrc/wiki/Permission-Management\\\">Permission Management</a> pour plus de détails."
+DSM_PERMISSIONS_TEXT: "ruTorrent s'exécute en tant qu'utilisateur de service interne <b>sc-rutorrent</b> dans DSM. Le dossier de téléchargements est configuré lors de l'installation pour être accessible par cet utilisateur. Veuillez lire <a target=\\\"_blank\\\" href=\\\"https://github.com/SynoCommunity/spksrc/wiki/Permission-Management\\\">Permission Management</a> pour plus de détails."
