--- a/cross/libid3tag/Makefile
+++ b/cross/libid3tag/Makefile
@@ -20,13 +20,15 @@ include ../../mk/spksrc.cross-cc.mk
 # Required for Meson-based consumers (e.g. MPD)
 libid3tag_pc:
 	@mkdir -p $(STAGING_INSTALL_PREFIX)/lib/pkgconfig
-	@echo 'prefix=$(INSTALL_PREFIX)' >  $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'exec_prefix=$${prefix}' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'libdir=$${exec_prefix}/lib' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'includedir=$${prefix}/include' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo '' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'Name: id3tag' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'Description: ID3 tag manipulation library' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'Version: $(PKG_VERS)' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'Libs: -L$${libdir} -lid3tag' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
-	@echo 'Cflags: -I$${includedir}' >> $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
+	@( \
+		echo "prefix=$(INSTALL_PREFIX)"; \
+		echo "exec_prefix=\$${prefix}"; \
+		echo "libdir=\$${exec_prefix}/lib"; \
+		echo "includedir=\$${prefix}/include"; \
+		echo ""; \
+		echo "Name: id3tag"; \
+		echo "Description: ID3 tag manipulation library"; \
+		echo "Version: $(PKG_VERS)"; \
+		echo "Libs: -L\$${libdir} -lid3tag"; \
+		echo "Cflags: -I\$${includedir}"; \
+	) > $(STAGING_INSTALL_PREFIX)/lib/pkgconfig/id3tag.pc
