--- a/spk/mpd/Makefile
+++ b/spk/mpd/Makefile
@@ -4,7 +4,7 @@ SPK_REV = 4
 SPK_ICON = src/mpd.png
 DSM_UI_DIR = app
 
-DEPENDS = cross/mpd
+DEPENDS = cross/mpd cross/mpc
 
 REQUIRED_MIN_DSM = 7.2
 UNSUPPORTED_ARCHS = comcerto2k
@@ -12,7 +12,7 @@ REQUIRED_MIN_SRM = 1.3
 
 MAINTAINER = hgy59
 DESCRIPTION = Music Player Daemon \(MPD\) is a flexible, powerful, server-side application for playing music. Through plugins and libraries it can play a variety of sound files while being controlled by its network protocol.
-CHANGELOG = "1. Update MPD to v0.24.8 (requires DSM 7.2+ for C++20 support). <br/>2. Remove Boost dependency."
+CHANGELOG = "1. Update MPD to v0.24.8 (requires DSM 7.2+ for C++20 support). <br/>2. Include mpc command-line client for diagnostics."
 
 DISPLAY_NAME = Music Player Daemon
 
@@ -29,6 +29,8 @@ NO_SERVICE_SHORTCUT = yes
 
 SERVICE_WIZARD_SHARENAME = wizard_music_folder
 FWPORTS = src/mpd.sc
+
+SPK_COMMANDS = bin/mpc
 
 POST_STRIP_TARGET = mpd_extra_install
 
