--- a/spk/shairport-sync/src/shairport-sync.conf
+++ b/spk/shairport-sync/src/shairport-sync.conf
@@ -33,3 +33,13 @@ alsa =
 // 2. Uncomment log_verbosity and statistics in diagnostics section
 // 3. Restart the package
 // 4. Connect from iOS and check syslog for activity
+
+// Metadata - track info from the source (artist, album, cover art)
+// Can be read by other applications via pipe at /tmp/shairport-sync-metadata
+metadata =
+{
+  enabled = "yes";
+  include_cover_art = "yes";
+  pipe_name = "/tmp/shairport-sync-metadata";
+  pipe_timeout = 5000;
+};
