HAProxy: Fix dashboard logging, stats auth, and UI improvements
- Use HAProxy 3.0 ring buffer for HTTP access logging
- Fix stats authentication to read from haproxy.cfg
- Add graceful reload using HAProxy -sf flag
- Add active menu highlighting for navigation
- Bundle jQuery and Popper.js locally (remove CDN)
- Fix typo: Statictics -> Statistics

--- a/spk/haproxy/src/haproxy.cfg
+++ b/spk/haproxy/src/haproxy.cfg
@@ -7,9 +7,17 @@ global
     user sc-haproxy
     daemon
     maxconn 256
-    log stdout format raw local0 info
+    log ring@httplog local0 info
     spread-checks 10
     ssl-default-bind-options ssl-min-ver TLSv1.2
+
+# Ring buffer for HTTP access logging (written to file)
+ring httplog
+    description "HTTP access log buffer"
+    format rfc3164
+    maxlen 2048
+    size 65535
+    backing-file /var/packages/haproxy/var/http-access.log
 
 defaults
     mode http
