--- a/spk/borgbackup/src/requirements-crossenv-armv5.txt
+++ b/spk/borgbackup/src/requirements-crossenv-armv5.txt
@@ -1,4 +1,4 @@
-# ARMv5-specific crossenv requirements
+# ARMv5-specific cross-compiled requirements (Python 3.11)
 # rpds_py pinned to 0.21.0 for Cargo.lock v3 compatibility with Rust 1.77.2
 
 borgbackup==1.4.3
